--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
 /* css */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* utility */
+
+._debug{
+    background-color: coral;
+    border: 1px solid black;
+    min-height: 80px;
+}
+
+._debugobj{
+    background-color:cadetblue;
+    border: 1px solid black;
+}
