--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,9 @@
     background-color:cadetblue;
     border: 1px solid black;
 }
+
+._jumbo{
+    height: 300px;
+    background-color: green;
+    border: 1px solid black;
+}
