--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,13 @@ main h1{
     text-align: center;
     padding: 20px 0;
 }
+
+._portfolio{
+    background-color: fuchsia;
+}
+
+._card{
+    border: 1px solid black;
+    background-color: blanchedalmond;
+    height: 100px;
+}
