--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
     border: 1px solid black;
 }
 
-main h1{
+main h2{
     text-align: center;
     padding: 20px 0;
 }
@@ -38,4 +38,8 @@ main h1{
     border: 1px solid black;
     background-color: blanchedalmond;
     height: 100px;
+}
+
+main p{
+    text-align: center;
 }
