--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 h1{
     color: white;
-    font-size: 30px;
+    font-size: 2.5rem;
     font-weight: bold;
 }
 
@@ -37,6 +37,11 @@ nav{
     background-color: white;
     height: 3px;
     width: 10vw;
+}
+
+.jumbotron i{
+    font-size: 3rem;
+    color: white;
 }
 
 .title{
