--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ h1{
     font-weight: bold;
 }
 
-/* nav */
 
 nav{
     background-color: #2C3E50;
@@ -33,15 +32,36 @@ nav{
     width: 30vw;
 }
 
-.jumbotron .line{
+.line{
     background-color: white;
-    height: 3px;
+    height: 5px;
     width: 10vw;
+    border-radius: 2px;
+}
+
+main .line{
+    background-color: #2C3E50;
 }
 
 .jumbotron i{
     font-size: 3rem;
     color: white;
+}
+
+main ._portfolio i{
+    color: #2C3E50;
+    font-size: 3rem;
+}
+
+main ._portfolio h2{
+    font-size: 2rem;
+    color: #2C3E50;
+    font-weight: bold;
+}
+
+main ._portfolio img{
+    width: 100%;
+    border-radius: 10px;
 }
 
 .title{
@@ -58,16 +78,6 @@ nav{
 main h2{
     text-align: center;
     padding: 20px 0;
-}
-
-._portfolio{
-    background-color: fuchsia;
-}
-
-._card{
-    border: 1px solid black;
-    background-color: blanchedalmond;
-    height: 100px;
 }
 
 main p{
