--- a/css/style.css
+++ b/css/style.css
@@ -13,16 +13,18 @@
     border: 1px solid black;
 }
 
-h1{
-    color: white;
-    font-size: 2.5rem;
-    font-weight: bold;
-}
+/* nav */
 
+nav .title{
+    color: white;
+    font-weight: bolder;
+}
 
 nav{
     background-color: #2C3E50;
 }
+
+/* .jumbotron */
 
 .jumbotron{
     background-color: #1ABC9C;
@@ -39,13 +41,22 @@ nav{
     border-radius: 2px;
 }
 
-main .line{
-    background-color: #2C3E50;
-}
-
-.jumbotron i{
+.jumbotron i,
+main .about-us i{
     font-size: 3rem;
     color: white;
+}
+
+.jumbotron h1{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: bolder;
+}
+
+/* main */
+
+main .line{
+    background-color: #2C3E50;
 }
 
 main ._portfolio i{
@@ -64,24 +75,23 @@ main ._portfolio img{
     border-radius: 10px;
 }
 
-.title{
+.about-us{
+    background-color: #1ABC9C;
+    margin-top: 50px;
+}
+
+main .about-us h2{
     color: white;
-    font-weight: bolder;
+    font-weight: bold;
 }
 
-._jumbo{
-    height: 300px;
-    background-color: green;
-    border: 1px solid black;
+main .about-us .line{
+    background-color: white;
 }
 
-main h2{
-    text-align: center;
-    padding: 20px 0;
-}
-
-main p{
-    text-align: center;
+main .box_text p{
+    width: 50%;
+    margin: 0 auto;
 }
 
 main ._info{
