--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ nav{
 }
 
 .jumbotron img{
-    width: 30vw;
+    width: 25vw;
 }
 
 .line{
@@ -89,9 +89,22 @@ main .about-us .line{
     background-color: white;
 }
 
-main .box_text p{
-    width: 50%;
-    margin: 0 auto;
+main .box_text{
+    width: 60%;
+    margin: auto;
+}
+
+main .about-us i{
+    font-size: 0.9rem;
+    padding-right: 3px;
+}
+
+main .about-us button{
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 3px;
+    padding: 2px 7px;
+    color: white;
 }
 
 main ._info{
