--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@ nav .title{
     font-weight: bolder;
 }
 
-nav{
+nav,
+footer{
     background-color: #2C3E50;
 }
 
@@ -124,7 +125,19 @@ main .my_form .border_form{
     border-bottom: 1px solid lightgrey;
 }
 
-footer h3{
-    margin-top: 30px;
-    text-align: center;
+main .location{
+    background-color: #3A546D;
+}
+
+main .location p{
+    font-size: 1.1rem;
+}
+
+main .location i{
+    display: inline-block;
+    height: 50px;
+    width: 50px;
+    line-height: 40px;
+    border: 1px solid white;
+    border-radius: 50%;
 }
